correct the overlaping of sections

--- a/styles.css
+++ b/styles.css
@@ -72,13 +72,6 @@ footer {
   }
 }
 
-@media only screen and (min-width: 768px) {
-  .si-article {
-    width: 20rem;
-    margin: auto;
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .si-article {
     width: 100%;
